 * Added accessible colour contrast guidelines to the style guide (Catherine Farman)
 * Added faceted search using the `.facet()` method (Karl Hobley)
 * Admin modal views no longer rely on Javascript `eval()`, for better CSP compliance (Matt Westcott)
 * Update editor guide for embeds and documents in rich text (Kevin Howbrook)
 * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
 * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
 * Fix: Remove duplicate border radius of avatars (Benjamin Thurm)
 * Fix: Site.get_site_root_paths() preferring other sites over the default when some sites share the same root_page (Andy Babic)
 * Fix: Pages with missing model definitions no longer crash the API (Abdulmalik Abdulwahab)
 * Fix: Rich text image chooser no longer skips format selection after a validation error (Matt Westcott)
 * Fix: Null characters in URLs no longer crash the redirect middleware on PostgreSQL (Andrew Crewdson, Matt Westcott)
 * Fix: Permission checks no longer prevent a non-live page from being unscheduled (Abdulmalik Abdulwahab)
 * Fix: Copy-paste between Draftail editors now preserves all formatting/content (Thibaud Colas)


2.1.1 (04.07.2018)
~~~~~~~~~~~~~~~~~~

 * Fix: Site.get_site_root_paths() preferring other sites over the default when some sites share the same root_page (Andy Babic)
 * Fix: Rich text image chooser no longer skips format selection after a validation error (Matt Westcott)
 * Fix: Null characters in URLs no longer crash the redirect middleware on PostgreSQL (Matt Westcott)


2.1 (22.05.2018)
~~~~~~~~~~~~~~~~

 * Add `HelpPanel` to add HTML within an edit form (Keving Chung)
 * Added direct profile picture upload to account preferences (Daniel Chimeno, Pierre Geier, Matt Westcott)
 * Added API endpoint for finding pages by HTML path (Karl Hobley)
 * Added time zone setting to account preferences (David Moore)
 * Added Elasticsearch 6 support (Karl Hobley)