@@ -20,6 +20,7 @@ Changelog
  * Added faceted search using the `.facet()` method (Karl Hobley)
  * Admin modal views no longer rely on Javascript `eval()`, for better CSP compliance (Matt Westcott)
  * Update editor guide for embeds and documents in rich text (Kevin Howbrook)
+ * Improved performance of sitemap generation (Michael van Tellingen)
  * Fix: Handle all exceptions from `Image.get_file_size` (Andrew Plummer)
  * Fix: Fix display of breadcrumbs in ModelAdmin (LB (Ben Johnston))
  * Fix: Remove duplicate border radius of avatars (Benjamin Thurm)
